--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   go_router: ^13.0.1
   intl: ^0.19.0
+  animate_do: ^3.1.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
