--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   intl: ^0.17.0
   animate_do: ^3.1.2
   local_auth: ^2.1.7
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_lints: ^2.0.0
