--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,19 @@ dependencies:
   animate_do: ^3.1.2
   local_auth: ^2.1.7
   flutter_easyloading: ^3.0.5
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/dolar.png"
+  adaptive_icon_background: "assets/dolar.png"
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
